Modify index.html, add example.html and create theme and style.css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>JanaeJanaeJanae</title>
+  <link rel="stylesheet" href="/theme/style.css">
 </head>
 <body>
-  <h1>Hey Hey Hey World!</h1>
+  <h1>Hey, Hey, Hey World!</h1>
+  <h3 id="subheader">Because 3 times is almost always better</h3>
+  <h3 class = "BrightWhite">Almost...</h3>
+
+  <img height=75%; width=50%; src="Snapchat-933626540.jpg" alt="My Filtered Face">
+
+<ul>
+  <li><a href="example.html" class = "BrightWhite">Example</a></li>
+  <li><a href="https://facebook.com/JanaeJanaeJanae">Facebook</a></li>
+  <li><a href="https://instagram.com/JanaeJanaeJanae">Instagram</a></li>
+</ul>
+
 </body>
 </html>
