Update example.html, index.html, Projects/index.html and theme/style.css

--- a/example.html
+++ b/example.html
@@ -2,34 +2,50 @@
 <html>
 <head>
 <title>HTML EXAMPLE</title>
+<link rel="stylesheet" href="/theme/style.css">
 </head>
 <body>
+<div id="Nav" class="navbar">
+  <ul class="container">
+    <li><a href="../index.html">Home</a></li>
+    <li><a href="../blog/index.html">Blogs</a></li>
+    <li><a href="../projects/index.html">Projects</a></li>
+  </ul>
+</div>
 
-<h1>HTML Example 1</h1>
-<p>[CMD + OPT + U] to view the source code of this HTML document.</p>
-<p>Now close the source code and inspect the document in the Elements panel of your Chrome Developer Tools [CMD + OPT + I] instead</p>
-<p>Use the magnifying glass in the top left to select elements in the window area.</p>
-<p>
-  W  O  A  h
+<div class="header">
+  <h1>HTML Example 1</h1>
+</div>
+
+<div class="content container">
+  <p>[CMD + OPT + U] to view the source code of this HTML document.</p>
+  <p>Now close the source code and inspect the document in the Elements panel of your Chrome Developer Tools [CMD + OPT + I] instead</p>
+  <p>Use the magnifying glass in the top left to select elements in the window area.</p>
+  <p>
+    W  O  A  h
     WHAT'S
-  GO  -  ING
-                    on
+    GO  -  ING
+    on
 
 
-  h   e   r   e
-              !
-        !
-  !
-</p>
-<!-- ALERT: THIS IS JUST A COMMENT -->
+    h   e   r   e
+    !
+    !
+    !
+  </p>
+  <!-- ALERT: THIS IS JUST A COMMENT -->
 
-<!--
+  <!--
 
-    SECRET: Developers often use comments to annotate their code.
+  SECRET: Developers often use comments to annotate their code.
 
-            ...or complain about their bosses. They aren't rendered on the page.
-            So only people who view the source code get to see them. Fun!
+  ...or complain about their bosses. They aren't rendered on the page.
+  So only people who view the source code get to see them. Fun!
 
 -->
+</div>
+<div class="footer">
+   <h5 class="container">Contact Info</h5>
+</div>
 </body>
 </html>
