--- a/index.html
+++ b/index.html
@@ -8,17 +8,33 @@
   <link rel="stylesheet" href="/theme/style.css">
 </head>
 <body>
-  <h1>Hey, Hey, Hey World!</h1>
-  <h3 id="subheader">Because 3 times is almost always better</h3>
-  <h3 class = "BrightWhite">Almost...</h3>
+  <div id = "nav" class="navbar">
+    <ul class="container">
+      <li><a href="../blog/index.html">Blogs</a></li>
+      <li><a href="../projects/index.html">Projects</a></li>
+      <li><a href="../example.html">Example</a></li>
+    </ul>
+  </div>
+  <div class="header">
+    <h1>Hey, Hey, Hey World!</h1>
+    <h3 id="subheader">Because 3 times is almost always better</h3>
+    <h3 class = "BrightWhite">Almost...</h3>
+  </div>
 
-  <img height=75%; width=50%; src="Snapchat-933626540.jpg" alt="My Filtered Face">
+<p><img height=75%; width=50%; src="Snapchat-933626540.jpg" alt="My Filtered Face"></p>
 
-<ul>
-  <li><a href="example.html" class = "BrightWhite">Example</a></li>
-  <li><a href="https://facebook.com/JanaeJanaeJanae">Facebook</a></li>
-  <li><a href="https://instagram.com/JanaeJanaeJanae">Instagram</a></li>
-</ul>
+  <div class="content container">
+
+    <ul>
+      <li><a href="example.html" class = "BrightWhite">Example</a></li>
+      <li><a href="https://facebook.com/JanaeJanaeJanae">Facebook</a></li>
+      <li><a href="https://instagram.com/JanaeJanaeJanae">Instagram</a></li>
+    </ul>
+  </div>
+  <div class="footer">
+        <h5 class="container">Contact Info</h5>
+  </div>
+
 
 </body>
 </html>
