--- a/projects/index.html
+++ b/projects/index.html
@@ -8,11 +8,35 @@
   <link rel="stylesheet" href="../theme/style.css">
 </head>
 <body>
-  <ul>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
-  </ul>
+  <div class="navbar">
+    <ul id="nav" class="container">
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="../blog/index.html">Blogs</a></li>
+      <li><a href="../example.html">Example</a></li>
+    </ul>
+  </div>
+  <div class="header">
+    <div class="container">
+      <h1>Projects</h1>
+      <h2>Clearly, there's nothing to see here</h2>
+      <img src="../Snapchat-933626540.jpg" alt="My face" height=25% width=25%>
+        </div>
+  </div>
+  <div class="content container">
+    <h2>
+      I Know A Little Spanish
+    </h2>
+    <ul id="espanol">
+      <li><a href="#"></a>Uno</li>
+      <li><a href="#"></a>Dos</li>
+      <li><a href="#"></a>Tres</li>
+      <li><a href="#"></a>Cuatro</li>
+      <li><a href="#"></a>Cinco</li>
+      <li><a href="#"></a>Seis</li>
+    </ul>
+  </div>
+  <div class="footer">
+    <h5 class="container">Contact Info</h5>
+  </div>
 </body>
 </html>
