Add Javascript prompt hello name

--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
   <link rel="stylesheet" href="/theme/style.css">
 </head>
 <body>
-  <div id = "nav" class="navbar">
+  <div class="navbar">
     <ul class="container">
       <li><a href="../blog/index.html">Blogs</a></li>
-      <li><a href="../projects/index.html">Projects</a></li>
+      <li>
+        <a href="../projects/index.html">Projects</a>
+        <ul class="dropdown">
+          <li><a href="">First Project</a></li>
+          <li><a href="">Second Project</a></li>
+          <li><a href="">Third Project</a></li>
+        </ul>
+      </li>
       <li><a href="../example.html">Example</a></li>
+      <li><a href="../contact/index.html">Contact</a></li>
     </ul>
   </div>
   <div class="header">
@@ -35,6 +43,6 @@
         <h5 class="container">Contact Info</h5>
   </div>
 
-
+<script src="/js/greeting.js" charset="utf-8"></script>
 </body>
 </html>
