--- a/example.html
+++ b/example.html
@@ -5,11 +5,19 @@
 <link rel="stylesheet" href="/theme/style.css">
 </head>
 <body>
-<div id="Nav" class="navbar">
+<div class="navbar">
   <ul class="container">
     <li><a href="../index.html">Home</a></li>
     <li><a href="../blog/index.html">Blogs</a></li>
-    <li><a href="../projects/index.html">Projects</a></li>
+    <li>
+      <a href="../projects/index.html">Projects</a>
+      <ul class="dropdown">
+        <li><a href="">First Project</a></li>
+        <li><a href="">Second Project</a></li>
+        <li><a href="">Third Project</a></li>
+      </ul>
+    </li>
+    <li><a href="../contact/index.html">Contact</a></li>
   </ul>
 </div>
 
