--- a/projects/index.html
+++ b/projects/index.html
@@ -13,6 +13,7 @@
       <li><a href="../index.html">Home</a></li>
       <li><a href="../blog/index.html">Blogs</a></li>
       <li><a href="../example.html">Example</a></li>
+      <li><a href="../contact/index.html">Contact</a></li>
     </ul>
   </div>
   <div class="header">
