--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
   <div class="header">
     <h1>Hey, Hey, Hey World!</h1>
-    <h3 id="subheader">Because 3 times is almost always better</h3>
+    <h3 id="subheader"></h3>
     <h3 class = "BrightWhite">Almost...</h3>
   </div>
 
