lots of changes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <p><img height=75%; width=50%; src="Snapchat-933626540.jpg" alt="My Filtered Face"></p>
 
   <div class="content container">
-
+    <input type="text" id="input" placeholder="What's your name?">
     <ul>
       <li><a href="example.html" class = "BrightWhite">Example</a></li>
       <li><a href="https://facebook.com/JanaeJanaeJanae">Facebook</a></li>
@@ -43,6 +43,7 @@
         <h5 class="container">Contact Info</h5>
   </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js" charset="utf-8"></script>
 <script src="/js/greeting.js" charset="utf-8"></script>
 </body>
 </html>
